testdata/baselines/reference/compiler/tluaVarargForwarding.errors.txt
tluaVarargForwarding.tlua(34,15): error TS2345: Argument of type 'number | nil' is not assignable to parameter of type 'string'.
  Type 'nil' is not assignable to type 'string'.
tluaVarargForwarding.tlua(46,7): error TS2322: Type 'string' is not assignable to type 'number'.
tluaVarargForwarding.tlua(55,7): error TS2322: Type 'string' is not assignable to type 'number'.
tluaVarargForwarding.tlua(62,15): error TS2304: Cannot find name 'Parameters'.
tluaVarargForwarding.tlua(63,19): error TS2304: Cannot find name 'ConstructorParameters'.


==== tluaVarargForwarding.tlua (5 errors) ====
    declare function target(a: number, ...: string): void;
    
    function forward(...: any): void
      // Forwarding into a rest parameter, in tail position.
      print(...);
      print("x", ...);
      target(1, ...);
    
      // The Lua libraries take the pack through their own rest tails.
      local ok = pcall(forward, ...);
      local count = select("#", ...);
    
      // Forwarding into a fixed parameter passes `any | nil`, because the tail may
      // run out before it. `tostring(value: any)` accepts nil -- and so does Lua,
      // where `tostring(nil)` is "nil" -- so this is legal, and no arity rule is
      // involved.
      tostring(...);
    
      // Parenthesized truncation says "exactly one value" explicitly. Same result.
      tostring((...));
    
      // `error()` takes no argument in Lua, and its parameters are optional here, so
      // a possibly-empty tail forwards cleanly.
      error(...);
    end
    
    declare function needsString(value: string): void;
    
    function forwardIntoRequired(...: number): void
      // The tail's value may be absent, so a parameter that cannot hold nil rejects
      // it -- an ordinary assignability error naming the real type, not an arity
      // rule. This is the check that keeps a maybe-empty tail out of a slot that
      // needs a value.
      needsString(...);
                  ~~~
!!! error TS2345: Argument of type 'number | nil' is not assignable to parameter of type 'string'.
!!! error TS2345:   Type 'nil' is not assignable to type 'string'.
    end
    
    // Lib sanity assertions on the inherited-lib rest rewrite.
    declare function twoArgs(a: number, b: string): number;
    
    // `ReturnType<T>` still resolves: its `(...: any) => infer R` survived the
    // rewrite with `R` bound. The negative assertion is the real gate -- if the
    // rewrite ate the `infer`, `R` degrades to `any` and only a *mismatch* can
    // detect it, since `any` satisfies every positive annotation.
    type Ret = ReturnType<typeof twoArgs>;
    local ret: Ret = 1;
    local badRet: Ret = "a";
          ~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
    // `Awaited<T>` matches a thenable through `then(onfulfilled: infer F, ...: infer _)`.
    // The `infer` sits in a vararg annotation, so it infers the pack's *element* type
    // and must carry no implicit `unknown[]` constraint -- with one, no element
    // candidate can satisfy it, `then` never matches, and Awaited silently stops
    // unwrapping (resolving to Promise<number> rather than number).
    type Unwrapped = Awaited<Promise<number>>;
    local unwrapped: Unwrapped = 1;
    local badUnwrapped: Unwrapped = "a";
          ~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
    // `Parameters<T>` and `ConstructorParameters<T>` are deliberately removed from
    // the libs: they are built on `...args: infer P`, which only works because a TS
    // rest parameter's type IS the parameter tuple. A vararg's annotation is the
    // pack's element type, so the tuple is unreachable -- and with operand spread
    // gone, no tlua program could consume it anyway. Restoring them is Stage 2.
    type Params = Parameters<typeof twoArgs>;
                  ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Parameters'.
    type CtorParams = ConstructorParameters<typeof twoArgs>;
                      ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'ConstructorParameters'.
    